fixed button icons on safari

--- a/src/scss/sections/_main.scss
+++ b/src/scss/sections/_main.scss
@@ -61,6 +61,8 @@
 
         img {
             margin-top: -2px;
+            width: 28px;
+            height: 28px;
         }
     }
 }
